<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#202020"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.4">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/TextView"
            android:textColor="@color/white"
            android:textSize="21sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_weight="0"
        android:orientation="vertical">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Button"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/TextView1"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button1"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button2"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button3"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button4"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button5"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button6"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button7"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button8"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button9"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button10"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button11"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button12"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button13"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button14"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button15"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button16"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button17"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button18"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button19"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button20"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button21"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button22"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button23"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button24"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/Button25"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/Button26"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

